--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,5 +36,5 @@
     "**/*.mjs",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "src/**/*.spec.ts"]
+  "exclude": ["node_modules", "./src/**/*.spec.ts"]
 }
