made the changes based on comments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@server/*": ["./src/server/*"],
       "@components/*": ["./src/components/*"],
-      "@env/*": ["./src/env/*"]
+      "@env/*": ["./src/env/*"],
+      "@api/*": ["./src/app/api/*"]
     },
     "plugins": [
       {
