--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -11,6 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: creyD/prettier_action@v4.3
-    with:
-      prettier_options: "--write **/*.tsx"
+      - name: Checkout
+      uses: actions/checkout@v3
+      with: 
+        ref: ${{ github.head_ref }}
+  
+      - name: Prettify code
+      uses: creyD/prettier_action@v4.3
+      with:
+          prettier_options: "--write **/*.tsx"
