--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -11,10 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          ref: ${{ github.head_ref }}
+          node-version: '18.x'
 
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
