--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -29,4 +29,4 @@ jobs:
           prettier_options: "--write **/*.tsx"
           prettier_plugins: "prettier-plugin-tailwindcss"
           only_changed: True
-          prettier_version: '2.7.1'
+          prettier_version: '2.x.x'
