--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -29,3 +29,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run test
+      env: 
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
