--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
         with:
+          dry: True
           prettier_options: "--write **/*.tsx"
           # prettier_plugins: "@tailwindlabs/prettier-plugin-tailwindcss"
           only_changed: True
