Change to run on PRs to main

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -2,7 +2,7 @@ name: Prettier Action
 
 on:
   pull_request:
-    branches: ["sburchfield33-juliazel-githubactions"]
+    branches: ["main"]
 
 jobs:
   prettier:
