Deleted test folder

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-        with: 
+      - uses: actions/checkout@v3
+        with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
       - name: Use Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
 
       - name: NPM Install
         run: npm i
@@ -26,4 +26,4 @@ jobs:
         with:
           prettier_options: "--write **/*.tsx"
           # prettier_plugins: "@tailwindlabs/prettier-plugin-tailwindcss"
-          prettier_version: '2.x.x'
+          prettier_version: "2.x.x"
