Changed yml file because i'm done

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
         with:
-          prettier_options: "--write **/*.tsx **/*.tsx **/*.mjs"
+          prettier_options: "--write **/*.tsx **/*.ts **/*.mjs"
           prettier_version: '2.x.x'
